更新 assign 的单元测试用例